Ajax working for add/remove instructors

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -20,6 +20,10 @@
   color: #b71c1c;
 }
 
+li.no_bullet {
+  list-style-type: none;
+}
+
 /********** BUTTONS ********/
 .btn-alert {
   background-color: #c62828;
