--- a/app/views/camps/show.html.erb
+++ b/app/views/camps/show.html.erb
@@ -3,7 +3,7 @@
     <%= render :partial => "camp_details" %>
   </div>
   <div class="col s5">
-    <%= render :partial => "camp_instructors"%>
+    <%= render :partial => "camp_instructors_vue"%>
     <%# render :partial => "camp_students"%>
   </div>
 </div>
