Clean up of spaces

--- a/app/views/camps/_camp_instructor_form_template.html.erb
+++ b/app/views/camps/_camp_instructor_form_template.html.erb
@@ -1,6 +1,6 @@
 <div id="form-template">
 
-  <!-- create an empty dosage object to work with -->
+  <!-- create an empty camp instructor object to work with -->
   <% @camp_instructor = CampInstructor.new %>
   <!-- now the form template itself -->
   <div class="row">
