--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,17 @@
-<div class="row">
-    <div class="col s12 center">
-    <h2 id="headline">Welcome to A&amp;M Chess Camp<!-- Learn chess the right way. --></h2>
-    <p>The A&amp;M Chess Camp (named after the founds, Alex and Mark Heimann) is one of the <b>premiere chess camps</b> for youth this side of the Mississippi. Our instructors have years of experience playing and love to share their <b>wisdom</b> and <b>enthusiasm</b> for the game with students of all levels.</p>
-    <p>Prospective students and parents should feel free to browse through our catalogue of <%= link_to "upcoming camps", camps_path %>. Unfortunately, we have not yet finished our online registration portal. So, should a camp pique your interest, please contact us <%= link_to "here", contact_path %> and we will begin assiting you with your registration as soon as possible. Thank you!</p>
+<div class="row">  
+  <h4>Welcome to Chess Ability Reinforcement Services!</h4>  
+  <div class="col s9">
+    <div class="card">
+      <div class="card-content">
+        <p>"Chess is a game which reflects most honor on human wit."
+          -- Francois Voltaire </br>
+          The Chess Ability Reinforcement Services is a system where a
+          group of experienced chess instructors is dedicated to 
+          providing your children with the finest chess
+          camps in the Pittsburgh area. The links below will 
+          tell you more about our camps.
+        </p>
+      </div>
+    </div>
   </div>
 </div>
