--- a/app/views/camps/_camp_instructors.html.erb
+++ b/app/views/camps/_camp_instructors.html.erb
@@ -1,5 +1,5 @@
-<div class="card indigo lighten-2">
-  <div class="card-content white-text">
+<div class="card">
+  <div class="card-content">
     <span class="card-title">Camp Instructors</span>
 	  <% if @instructors.empty? %>
 		<p>No instructors at this time</p>
