--- a/app/views/camps/_camp_instructors_vue.html.erb
+++ b/app/views/camps/_camp_instructors_vue.html.erb
@@ -1,7 +1,7 @@
 <div id="assignments">
   <%= hidden_field_tag "camp_id", @camp.id %>
-  <div class="card indigo lighten-2">
-    <div class="card-content white-text">
+  <div class="card">
+    <div class="card-content">
       <span class="card-title">Camp Instructors</span>
       <% if @camp.instructors.empty? %>
       <p>No instructors at this time</p>
