--- a/app/views/curriculums/index.html.erb
+++ b/app/views/curriculums/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= link_to curriculum.name, curriculum %></td>
         <td><%= curriculum.min_rating == 0 ? "Unrated" : curriculum.min_rating %> - <%= curriculum.max_rating %></td>
         <td><%= Camp.for_curriculum(curriculum.id).size %></td>
-        <td><%= link_to 'Edit', edit_curriculum_path(curriculum), :class=>"btn waves-effect waves-light blue" %></td>
+        <td><%= link_to 'Edit', edit_curriculum_path(curriculum), :class=>"btn waves-effect waves-light" %></td>
       </tr>
     <% end %>
   </tbody>
