--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,17 @@
-<div class="row">
-  <div class="col s12 center">
-    <h2>About A&amp;M Chess Camp</h2>
-    <p>Gradmaster Dr. Siegbert Tarrasch once said "Chess, like love, like music, has the power to make us happy". This has become our motto over the years, as each time one of our students succeeds we are reminded of what our true passion in life really is: sharing the wonders of chess.</p>
-    <p>To give some background, A&amp;M Chess Camp got its start, of all places, in the basement of USCF Chess Masters' Alex and Mark Heimann's home. Trained by their father, Prof H, since before they could crawl, Alex and Mark are experienced beyond their years at the game. Having swept the competition at a plethora of national tournaments, the twins founded this school to teach others their secrets to success <em>(and to help pay for their tuition as well!)</em></p>
+<div class="row">    
+  <div class="col s9">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">About Chess Ability Reinforcement Services</span>
+        <p> Are your kids interested in chess? We have a crew of best 
+          chess instructors in the Pittsburgh area. Our camps will provide
+          your kids the best chess learning experience at a affoldable price.
+          Come visit our offices at 5000 Forbes Avenue (Porter 224A) and see 
+          how we can help your kids achieve greatness.
+        </p>
+        <p>&nbsp;</p>
+      </div>
+    </div>
   </div>
 </div>
+
