--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,35 +1,43 @@
-<div class="row">
-	  <div class="col s12 center">
-		<h2>Contact A&amp;M Chess Camps</h2>
+<div class="row">    
+  <div class="col s9">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Contacting Chess Ability Reinforcement Services</span>
+        <p>Unfortunately, the Chess Ability Reinforcement Services is not a real 
+            website, but rather a sample project developed
+            by Zehaotian Lin and Professor Heimann at Carnegie Mellon 
+            University. We are sure that you wanted best chess camps 
+            for your children from the most exquisite instructors on the 
+            planet, but that's how it goes sometimes. If you are bitterly 
+            disappointed<em>(and quite honestly, you should be)</em> and 
+            want to grouse to someone, here's the contact information below.
+        </p>
+        <p>&nbsp;</p>
+      </div>
+    </div>
 
-        <p>Despite the inspiring story we told in our <%= link_to "about page", about_path %>, the
-          fact is that these camps are a fiction created for a class project for students at Carnegie Mellon University. No doubt you wanted to sign your
-          child up for every camp we offer so they wouldn't lose every round at
-          chess tournaments, but apparently you'll just have to keep getting used to losing.
-          If you are bitterly disappointed (and quite honestly, you should be) and want to grouse to someone, here's the contact info:</p>
-
-		<p class="supertiny">&nbsp;</p>
-		<table cellpadding="3">
-			<tr>
-				<td>Webmaster:&nbsp;&nbsp;&nbsp;</td>
-				<td>Professor Larry Heimann</td>
-			</tr>
-			<tr>
-				<td>Email:</td>
-				<td>
-				<%= mail_to("profh@cmu.edu", "Klingon Code Warrior*", :encode => "javascript") %> 
-				</td>
-			</tr>
-			<tr>
-				<td>Phone:</td>
-				<td>412-268-8211</td>
-			</tr>
-		</table>
-
-		<p class="note"><br>*I am a professor of information systems at Carnegie Mellon University and this nickname was a little joke between myself and my students that I adopted as my signature for all my programming work.  
-			<br><br><em>... in truth I am only half-Klingon.</em></p>
-			
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-	</div>
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Contact</span>
+        <table cellpadding="3">
+          <tr>
+            <td>Webmaster:&nbsp;&nbsp;&nbsp;</td>
+            <td>Zehaotian Lin</td>
+          </tr>
+          <tr>
+            <td>Email:</td>
+            <td>
+            <%= mail_to("zehaotil@andrew.cmu.edu", "zehaotil@andrew.cmu.edu", encode: "javascript") %> 
+            </td>
+          </tr>
+          <tr>
+            <td>Phone:</td>
+            <td>412-345-6789</td>
+          </tr>
+        </table>
+        <p >I am a Student majoring Information Systems at Carnegie Mellon 
+          University.</em></p>
+      </div>
+    </div>
+  </div>
 </div>
