--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= link_to instructor.name, instructor %></td>
         <td><%= number_to_phone instructor.phone %></td>
         <td><%= instructor.camps.size %></td>
-        <td><%= link_to 'Edit', edit_instructor_path(instructor), :class=>"btn waves-effect waves-light blue" %></td>
+        <td><%= link_to 'Edit', edit_instructor_path(instructor), :class=>"btn waves-effect waves-light" %></td>
       </tr>
     <% end %>
   </tbody>
