--- a/app/views/partials/_camps_list.html.erb
+++ b/app/views/partials/_camps_list.html.erb
@@ -1,5 +1,5 @@
-<div class="card indigo lighten-2">
-  <div class="card-content white-text">
+<div class="card">
+  <div class="card-content">
     <span class="card-title"><%= state %> Camps</span>
     <% if camps.empty? %>
     <p>No camps at this time</p>
