--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,12 +1,10 @@
-<nav>
-  <div class="nav-wrapper">
-    &nbsp&nbsp
-    <a href="/" class="brand-logo">A&M Chess Camp</a>
-    <ul class="right">
-      <li><%= link_to "Curriculums", curriculums_path %></li>
-      <li><%= link_to "Camps", camps_path %></li> 
-      <li><%= link_to "Instructors", instructors_path %></li>
-      <li><%= link_to "Locations", locations_path %></li>
+<nav id="nav">
+  <div class="container">
+    <ul class="left hide-on-med-and-down">
+      <li><%= link_to 'Curriculums', curriculums_path %></li>
+      <li><%= link_to 'Camps', camps_path %></li>
+      <li><%= link_to 'Instructors', instructors_path %></li>
+      <li><%= link_to 'Locations', locations_path %></li>
     </ul>
   </div>
 </nav>
