--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -9,4 +9,6 @@
 <% end %>
 
 
-<%= link_to 'New Location', new_location_path %>
+<%= link_to(eval("new_location_path"), class: "btn waves-effect waves-light") do %>
+  &nbsp;Add a New Location
+<% end %>
