--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -33,5 +33,7 @@
 
     <% end %>
 
-<%= link_to 'New instructor', new_instructor_path %>
+<%= link_to(eval("new_instructor_path"), class: "btn waves-effect waves-light") do %>
+  &nbsp;Add a New Instructor
+<% end %>
 
