--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -6,5 +6,13 @@
       <li><%= link_to 'Instructors', instructors_path %></li>
       <li><%= link_to 'Locations', locations_path %></li>
     </ul>
+    <ul style="color: #ffd600;" class="right" id="login">
+      <% if logged_in? %>
+        <%= link_to 'Logout', logout_path %>
+        <!––<%= current_user.username %>:<%= current_user.role %>––>
+      <% else %>
+        <%= link_to 'Login', login_path %>
+      <% end %>
+		</div>
   </div>
 </nav>
