create new family functionality broken, need to fix

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -5,6 +5,7 @@
       <li><%= link_to 'Camps', camps_path %></li>
       <li><%= link_to 'Instructors', instructors_path %></li>
       <li><%= link_to 'Locations', locations_path %></li>
+      <li><%= link_to 'Families', families_path %></li>
     </ul>
     <ul style="color: #ffd600;" class="right" id="login">
       <% if logged_in? %>
