git diff app/assets/stylesheets/application.scss
;
a1

--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -28,7 +28,7 @@
 </table>
 
 <span class="paginate">
-  <%= will_paginate @instructors, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'instructors' %>
+  <%= will_paginate @instructors, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'page' %>
 </span>
 
     <% end %>
