--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,4 +17,7 @@
 $primary-color: #303F9F;
 @import "materialize";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
-
+#toast-container {
+  left:1%;
+  right: auto !important;
+}
