--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -30,7 +30,7 @@
 </table>
 
 <span class="paginate">
-  <%= will_paginate @families, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'families' %>
+  <%= will_paginate @families, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'page' %>
 </span>
 
     <% end %>
