--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -7,12 +7,13 @@
       <li><%= link_to 'Locations', locations_path %></li>
       <li><%= link_to 'Families', families_path %></li>
     </ul>
-    <ul style="color: #ffd600;" class="right" id="login">
+    <div style="color: #ffd600;" class="right" id="login">
       <% if logged_in? %>
         <%= link_to 'Logout', logout_path %>
-        <!––<%= current_user.username %>:<%= current_user.role %>––>
+        <%= current_user.username %>:<%= current_user.role %>
       <% else %>
         <%= link_to 'Login', login_path %>
+        <%= link_to 'Sign Up', new_family_path %>
       <% end %>
 		</div>
   </div>
