--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -1,14 +1,18 @@
-<%= simple_form_for(@family) do |f| %>
-  <%= f.error_notification %>
+<div class="card">    
+  <div class="card-content">
+    <%= simple_form_for(@family) do |f| %>
+      <%= f.error_notification %>
+      <div class="row">
+        <div class="form-inputs">
+          <%= f.input :family_name, label_html: { class: 'active' } %>
+          <%= f.input :parent_first_name, label_html: { class: 'active' } %>
+        </div>
+      </div>
+    </div>
+</div>
   <div class="row">
-    <div class="form-inputs">
-      <%= f.input :family_name, label_html: { class: 'active' } %>
-      <%= f.input :parent_first_name, label_html: { class: 'active' } %>
-      <%= f.input :username, label_html: { class: 'active' } %>
-      <%= f.input :password, label_html: { class: 'active' } %>
-      <%= f.input :password_confirmation, label_html: { class: 'active' } %>
-      <%= f.input :email, label_html: { class: 'active' } %>
-      <%= f.input :phone, label_html: { class: 'active' } %>
+    <div class="col s12">
+      <%= render :partial => "user_fields", locals: {f: f} %>
     </div>
   </div>
   <div class="row">
