--- a/app/views/camps/_inactive_camps.html.erb
+++ b/app/views/camps/_inactive_camps.html.erb
@@ -10,7 +10,9 @@
       <th>Time Slot</th>
       <th>Max Students</th>
       <th>Remaining Slots</th>
+      <% if can? :update, Camp %>
       <th colspan="3"></th>
+      <% end %>
     </tr>
   </thead>
 
@@ -21,8 +23,10 @@
         <td><%= camp.start_date.strftime("%m/%d/%y") %></td>
         <td><%= camp.time_slot == "am" ? "Morning" : "Afternoon" %></td>
         <td><%= camp.max_students %></td>
-        <td><%#camp.max_students - camp.registrations.count %></td>
+        <td><%=camp.max_students - camp.registrations.count %></td>
+        <% if can? :update, Camp %>
         <td><%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light" %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
