--- a/app/views/locations/_locations_list.html.erb
+++ b/app/views/locations/_locations_list.html.erb
@@ -10,7 +10,9 @@
         <th>Name</th>
         <th>Address</th>
         <th>Max Capacity</th>
+        <% if can? :update, Location %>
         <th colspan="3"></th>
+        <% end %>
       </tr>
     </thead>
 
@@ -20,7 +22,9 @@
           <td><%= link_to location.name, location %></td>
           <td><%= render :partial => "partials/address_info", locals: {location: location} %></td>
           <td><%= location.max_capacity %></td>
+          <% if can? :update, Location %>
           <td><%= link_to 'Edit', edit_location_path(location), :class=>"btn waves-effect waves-light" %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
