--- a/app/views/partials/_index_structure.html.erb
+++ b/app/views/partials/_index_structure.html.erb
@@ -13,9 +13,11 @@
   <br></br>
   <div class="col s3 center">
     <!-- Add a button for new instances of object -->
-    <%= link_to(eval("new_#{model_name}_path"), class: "btn waves-effect waves-light") do %>
-      <!-- <i class="fa fa-plus"></i> -->
-      &nbsp;Add a New <%= model_name.capitalize %>
+    <% if can? :create, model_name %>
+      <%= link_to(eval("new_#{model_name}_path"), class: "btn waves-effect waves-light") do %>
+        <!-- <i class="fa fa-plus"></i> -->
+        &nbsp;Add a New <%= model_name.capitalize %>
+      <% end %>
     <% end %>
   </div>
 </div>
