--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -6,7 +6,7 @@
       <li><%= link_to 'Instructors', instructors_path %></li>
       <li><%= link_to 'Locations', locations_path %></li>
       <li><%= link_to 'Families', families_path %></li>
-      <li><%= link_to 'cart', sessions_cart_path %></li>
+      <li><%= link_to 'cart', cart_path %></li>
     </ul>
     <div style="color: #ffd600;" class="right" id="login">
       <% if logged_in? %>
@@ -14,6 +14,7 @@
         <%= current_user.username %>:<%= current_user.role %>
       <% else %>
         <%= link_to 'Login', login_path %>
+        &nbsp;&nbsp;
         <%= link_to 'Sign Up', new_family_path %>
       <% end %>
 		</div>
