--- a/app/views/partials/_object_options.html.erb
+++ b/app/views/partials/_object_options.html.erb
@@ -1,19 +1,21 @@
-<% if can? :manage, object %>
-  <% opt = "#{object.respond_to?(:proper_name) ? object.proper_name : (object.respond_to?(:name) ? object.name : model_name.capitalize) }" %>
+<% opt = "#{object.respond_to?(:proper_name) ? object.proper_name : (object.respond_to?(:name) ? object.name : model_name.capitalize) }" %>
   
   <div class="form-actions">
-    <%= link_to(eval("#{model_name.pluralize}_path"), class: 'waves-effect waves-light btn') do %>
-      &nbsp;Display All <%# model_name.pluralize.capitalize %>
+    <% if can? :read, object %>
+      <%= link_to(eval("#{model_name.pluralize}_path"), class: 'waves-effect waves-light btn') do %>
+        &nbsp;Display All <%# model_name.pluralize.capitalize %>
+      <% end %>
+      &nbsp;&nbsp;
     <% end %>
-    &nbsp;&nbsp;
     
-    <%= link_to(eval("edit_#{model_name}_path(object)"), class: 'waves-effect waves-light btn') do %>
-        &nbsp;<%= "Edit #{opt}" %>
-    <% end %>
-    &nbsp;&nbsp;
-    
-    <%= link_to(eval("#{model_name}_path(object)"), method: 'delete', data: {confirm: "Are you sure you want to permanently delete #{opt}"}, class: 'waves-effect waves-light btn btn-alert') do %>
-        &nbsp;<%= "Delete #{opt}" %>
+    <% if can? :manage, object %>
+      <%= link_to(eval("edit_#{model_name}_path(object)"), class: 'waves-effect waves-light btn') do %>
+          &nbsp;<%= "Edit #{opt}" %>
+      <% end %>
+      &nbsp;&nbsp;
+      
+      <%= link_to(eval("#{model_name}_path(object)"), method: 'delete', data: {confirm: "Are you sure you want to permanently delete #{opt}"}, class: 'waves-effect waves-light btn btn-alert') do %>
+          &nbsp;<%= "Delete #{opt}" %>
+      <% end %>
     <% end %>
   </div>
-<% end %>
