--- a/app/views/partials/_nav_guest.html.erb
+++ b/app/views/partials/_nav_guest.html.erb
@@ -6,13 +6,9 @@
       <li><%= link_to 'Locations', locations_path %></li>
     </ul>
     <div style="color: #ffd600;" class="right" id="login">
-      <% if logged_in? %>
-        <%= link_to 'Logout', logout_path %>
-        <%= current_user.username %>:<%= current_user.role %>
-      <% else %>
-        <%= link_to 'Login', login_path %>
-        <%= link_to 'Sign Up', new_family_path %>
-      <% end %>
+      <%= link_to 'Login', login_path %>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <%= link_to 'Sign Up', new_family_path %>
 		</div>
   </div>
 </nav>
