--- a/app/views/partials/_object_options.html.erb
+++ b/app/views/partials/_object_options.html.erb
@@ -8,12 +8,13 @@
       &nbsp;&nbsp;
     <% end %>
     
-    <% if can? :manage, object %>
+    <% if can? :update, object %>
       <%= link_to(eval("edit_#{model_name}_path(object)"), class: 'waves-effect waves-light btn') do %>
           &nbsp;<%= "Edit #{opt}" %>
       <% end %>
       &nbsp;&nbsp;
-      
+    <% end %>  
+    <% if can? :destroy, object %>
       <%= link_to(eval("#{model_name}_path(object)"), method: 'delete', data: {confirm: "Are you sure you want to permanently delete #{opt}"}, class: 'waves-effect waves-light btn btn-alert') do %>
           &nbsp;<%= "Delete #{opt}" %>
       <% end %>
