--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Students#show</h1>
-<p>Find me in app/views/students/show.html.erb</p>
+<div class="row">
+  <div class="col s5">
+    <%= render :partial => "student_details" %>
+  </div>
+  <div class="col s7">
+    <%=  %>
+  </div>
+</div>
+<div class="row">
+  <div class="col s12">
+    <%= render :partial => "partials/object_options", locals: {model_name: "student", object: @student} %>
+  </div>
+</div>
