added camp students page

--- a/app/views/camps/_camp_instructors_no_link.html.erb
+++ b/app/views/camps/_camp_instructors_no_link.html.erb
@@ -7,7 +7,7 @@
       <ul>
         <% @instructors.each do |i| %>
           <li>
-            <%= link_to i.proper_name, instructor_path(i) %>
+            <%= i.proper_name %>
           </li>
         <% end %>
       </ul>
