--- a/app/views/camps/_camp_students_no_link.html.erb
+++ b/app/views/camps/_camp_students_no_link.html.erb
@@ -8,7 +8,7 @@
         <ul>
            <% @students.each do |s| %>
             <li>
-              <%= link_to s.proper_name, student_path(s) %>
+              <%= s.proper_name %>
             </li>
           <% end %>
         </ul>
