--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -3,7 +3,7 @@
     <%= render :partial => "family_details" %>
   </div>
   <div class="col s5">
-    
+    <%= render :partial => "family_students" %>
   </div>
 </div>
 <div class="row">
