--- a/app/views/families/_family_students.html.erb
+++ b/app/views/families/_family_students.html.erb
@@ -13,6 +13,11 @@
           <% end %>
         </ul>
       <% end %>
+      <% if can? :new, Student %>
+      <div class="card-action">
+        <%= link_to "Add a new student", new_student_path(family_id: @family.id) %>
+      </div>
+    <% end %>
     </div>
   </div>
 </div>
