--- a/app/views/students/_index_form.html.erb
+++ b/app/views/students/_index_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
   <div class="row">
     <div class="form-inputs">
-      <%= f.input :family_id, as: :hidden, input_html: { value: @family.id } %>
+      <%= f.input :family_id, collection: Family.active.alphabetical.to_a, include_blank: true %>
       <%= f.input :first_name, label_html: { class: 'active' } %>
       <%= f.input :last_name, label_html: { class: 'active' } %>
       <%= f.input :date_of_birth, label_html: { class: 'active' } %>
