--- a/app/views/partials/_nav_parent.html.erb
+++ b/app/views/partials/_nav_parent.html.erb
@@ -4,11 +4,14 @@
       <li><%= link_to 'My Profile', family_path(current_user.family) %></li>
       <li><%= link_to 'Curriculums', curriculums_path %></li>
       <li><%= link_to 'Camps', camps_path %></li>
-      <li><%= link_to 'Cart', show_cart_path %></li>
     </ul>
     <div style="color: #ffd600;" class="right" id="login">
       <%= link_to 'Logout', logout_path %>
       <%= current_user.username %>:<%= current_user.role %>
 		</div>
+    <ul class="right hide-on-med-and-down">
+      <li><%= link_to 'Cart', show_cart_path %></li>
+    </ul>
+    
   </div>
 </nav>
