--- a/app/views/instructors/_form.html.erb
+++ b/app/views/instructors/_form.html.erb
@@ -9,6 +9,7 @@
       <%# f.input :phone, label_html: { class: 'active' } %>
       <%= f.input :user_id, label_html: { class: 'active' } %>
       <%= f.input :active %>
+      <%= f.input :picture %>
     </div>
   </div>
   <div class="row">
