--- a/app/views/partials/_nav_admin.html.erb
+++ b/app/views/partials/_nav_admin.html.erb
@@ -7,7 +7,7 @@
       <li><%= link_to 'Locations', locations_path %></li>
       <li><%= link_to 'Families', families_path %></li>
       <li><%= link_to 'Students', students_path %></li>
-      <li><%= link_to 'Cart', show_cart_path %></li>
+      <li><%= link_to 'Cart', carts_path %></li>
     </ul>
     <div style="color: #ffd600;" class="right" id="login">
       <%= link_to 'Logout', logout_path %>
