--- a/app/views/partials/_nav_parent.html.erb
+++ b/app/views/partials/_nav_parent.html.erb
@@ -10,7 +10,7 @@
       <%= current_user.username %>:<%= current_user.role %>
 		</div>
     <ul class="right hide-on-med-and-down">
-      <li><%= link_to 'Cart', show_cart_path %></li>
+      <li><%= link_to 'Cart', carts_path %></li>
     </ul>
     
   </div>
