--- a/app/views/camps/_camp_family_students_vue.html.erb
+++ b/app/views/camps/_camp_family_students_vue.html.erb
@@ -2,7 +2,7 @@
   <%= hidden_field_tag "camp_id", @camp.id %>
   <div class="card">
     <div class="card-content">
-      <span class="card-title">Registrations</span>
+      <span class="card-title">Add Students to Cart</span>
       <% if @eligilble_students.empty? %>
       <p>You have no students qualified to be registered.</p>
       <% else %>
