--- a/app/views/camps/_camp_student_form_template.html.erb
+++ b/app/views/camps/_camp_student_form_template.html.erb
@@ -16,7 +16,7 @@
         </div>
         <div class="row">
           <div class="form-actions col s8">
-            <%= f.button :submit %>
+            <%= f.button :submit, 'Add to Cart' %>
           </div>
         </div>
       <% end %>
