instructor new and edit works

--- a/app/views/instructors/new.html.erb
+++ b/app/views/instructors/new.html.erb
@@ -5,7 +5,7 @@
                                                           type_of_form: "New Instructor",
                                                           fields1: "instructor_fields_admin",
                                                           section_2: "User Account",
-                                                          fields2: "user_fields"} %>
+                                                          fields2: "user_fields_admin"} %>
 <% end %>
 
 <%= link_to 'Back', instructors_path %>
