--- a/app/views/carts/_form.html.erb
+++ b/app/views/carts/_form.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="row">
     <div class="form-actions col s8">
-      <%= f.button :submit %>
+      <%= f.button :submit, "Pay" %>
     </div>
   </div>
 <% end %>
