--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -8,6 +8,12 @@
 </div>
 <div class="row">
   <div class="col s12">
-    <%= render :partial => "partials/object_options", locals: {model_name: "family", object: @family} %>
+    <% if logged_in? && current_user.role?(:admin) %>
+      <%= render :partial => "partials/object_options", locals: {model_name: "family", object: @family} %>
+    <% elsif logged_in? && current_user.role?(:parent) %>
+      <%= link_to(eval("edit_family_path(@family)"), class: "btn waves-effect waves-light") do %>
+        &nbsp;Edit Profile
+      <% end %>
+    <% end %>
   </div>
 </div>
