--- a/app/views/partials/_nav_parent.html.erb
+++ b/app/views/partials/_nav_parent.html.erb
@@ -1,6 +1,7 @@
 <nav id="nav">
   <div class="container">
     <ul class="left hide-on-med-and-down">
+      <li><%= link_to 'Dashboard', dashboard_path %></li>
       <li><%= link_to 'My Profile', family_path(current_user.family) %></li>
       <li><%= link_to 'Curriculums', curriculums_path %></li>
       <li><%= link_to 'Camps', camps_path %></li>
