--- a/app/views/students/_student_details.html.erb
+++ b/app/views/students/_student_details.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Date of Birth:</strong>
-  <%= @student.date_of_birth %>
+  <%= display_date(@student.date_of_birth) %>
 </p>
 
 <p>
