--- a/app/views/home/_admin_dashboard.html.erb
+++ b/app/views/home/_admin_dashboard.html.erb
@@ -1,2 +1,2 @@
-<h3>Dashboard</h3>
-
+<%= render "admin_script" %>
+<div id="registration-by-month-graph" style="min-width: 300px; height: 400px; max-width: 600px; margin: 0 auto"></div>
