--- a/app/views/carts/checkout_summary.html.erb
+++ b/app/views/carts/checkout_summary.html.erb
@@ -6,3 +6,6 @@
 <h2>Payment Method</h2>
 
 <%= render 'form', registration: @registration %>
+<%= link_to(eval("carts_path"), class: "btn waves-effect waves-light") do %>
+  Back
+<% end %>
